<resources>
    <string name="app_name">GetMediaApp</string>
    <string name="pick_image">pick image</string>
    <string name="pick_audio">pick audio</string>
    <string name="pick_video">Pick Video</string>
    <string name="pick_any_file">Pick Any File</string>
    <string name="real_path">Real Path</string>
    <string name="upload">Upload</string>
    <string name="no_of_images">No of images</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set_count">Set Count</string>
    <string name="set">set</string>
    <string name="add">add</string>
    <string name="count">count</string>
    <string name="clear_all">clear all</string>
    <string name="compare_last_selected">Compare last selected</string>
    <string name="actual_image">Actual Image</string>
    <string name="compressed_image">Compressed Image</string>
</resources>
